@@ -99,6 +99,16 @@ class Layout extends Error {
 	}
 
 	/**
+	 *	createLinkToUserHome() - Creates a link to a user's home page	
+	 * 
+	 *	@param	string	The user's user_name
+	 *	@param	string	The user's realname
+	 */
+	function createLinkToUserHome($user_name, $realname) {
+		return '<a href="/users/'.$user_name.'/">'.$realname.'</a>';
+	}
+
+	/**
 	 *	header() - "steel theme" top of page
 	 *
 	 * @param	array	Header parameters array
